# dataprodukt-toppoppgaver-deling

./: .gitignore  Makefile  README.md  main.py  navn.py  ner_vask_opplysninger.py  pretty-sheets.py  pretty_sheets.py  pyproject.toml  requirements.txt  setup.cfg  vaskemaskin.py
patterns/: unntak.txt
requirements/: dev.in  dev.txt  main.in  main.txt
src/patterns/: regex_patterns.txt  unntak.txt
src/toppoppgaver/: get_survey_data.py  main.py  navn.py  ner_vask_opplysninger.py  pretty_sheets.py  vaskemaskin.py
toppoppgaver/: main.py  navn.py  ner_vask_opplysninger.py  pretty_sheets.py
