[tool.poetry]
name = "dataprodukt-toppoppgaver-deling"
version = "0.1.0"
description = ""
authors = ["Tobias McVey <tobias.mcvey@nav.no>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dataprodukt_toppoppgaver_deling"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pyjstat = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipykernel = "^6.17.1"
pandas = "^1.5.1"
openpyxl = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
