[metadata]
name = dataprodukt-toppoppgaver-deling
version = 0.1.0
description = app for å fjerne personopplysninger fra fritekstsvar og dele data med andre team internt i NAV
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*


